[gd_scene load_steps=2 format=2]

[ext_resource path="res://Player/PauseMenu.gd" type="Script" id=1]

[node name="PauseMenu" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = 1.0
margin_bottom = 1.0
color = Color( 0.454902, 0.478431, 0.788235, 0.32549 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -60.0
margin_right = 64.0
margin_bottom = -20.0
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = 20.0
margin_right = 64.0
margin_bottom = 60.0
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = 100.0
margin_right = 64.0
margin_bottom = 140.0
text = "Quit Game"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
